feat: add header

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
 </head>
+
 <body>
-    
+    <div class="body_container">
+        <header>
+            <div class="head">
+                <div class="head_nav">
+                    <div class="head_nav_burger">
+                        <span></span>
+                    </div>
+                    <nav>
+                        <ul class="nav">
+                            <li><a href="#contacts">Contacts</a></li>
+                            <li><a href="#about">About me</a></li>
+                            <li><a href="#skills">Skills</a></li>
+                            <li><a href="#example">Code</a></li>
+                            <li><a href="#experience">Experience</a></li>
+                            <li><a href="#education">Education</a></li>
+                            <li><a href="#english">English</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="avatar">
+                    <div class="img_avatar"><img src="assets/img/thumbnail.png" alt="avatar"></div>
+                </div>
+                <div class="name">
+                    <h1>Nadezhda Rachkova</h1>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
+
 </html>
