--- a/index.html
+++ b/index.html
@@ -117,10 +117,18 @@
                             improvements to the website functionality.</p>
                         <h3>My projects</h3>
                         <ul class="list_projects">
-                            <li><a href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/library/">Library</a></li>
-                            <li><a href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/random-game/">Random-game/</a></li>
-                            <li><a href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/image-gallery"></a>Image-gallery</li>
-                            <li><a href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/audio-player">Audio-player</a></li>
+                            <li><a
+                                    href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/library/">Library</a>
+                            </li>
+                            <li><a
+                                    href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/random-game/">Random-game/</a>
+                            </li>
+                            <li><a
+                                    href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/image-gallery"></a>Image-gallery
+                            </li>
+                            <li><a
+                                    href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/audio-player">Audio-player</a>
+                            </li>
                         </ul>
                     </section>
                     <section class="section_education" id="education">
@@ -157,6 +165,18 @@
                 </div>
             </main>
         </div>
+        <footer>
+            <div class="footer_block">
+                <div class="github"><a href="https://github.com/Nadin21" target="_blank"><i class="fa fa-github"
+                            aria-hidden="true"></i>
+                        <span>My GitHub</span></a>
+                </div>
+                <div class="copy">&copy; 2023</div>
+                <div class="school"><a href="https://rs.school/js/" target="_blank"><img
+                            src="assets/icons/rs_school_js.svg" alt="Rolling Scopes"></a>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
