feat: add style sheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -121,10 +127,10 @@
                                     href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/library/">Library</a>
                             </li>
                             <li><a
-                                    href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/random-game/">Random-game/</a>
+                                    href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/random-game/">Random-game</a>
                             </li>
                             <li><a
-                                    href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/image-gallery"></a>Image-gallery
+                                    href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/image-gallery/">Image-gallery</a>
                             </li>
                             <li><a
                                     href="https://rolling-scopes-school.github.io/nadin21-JSFEPRESCHOOL2023Q2/audio-player">Audio-player</a>
