--- a/index.html
+++ b/index.html
@@ -185,7 +185,12 @@
                 </div>
             </div>
         </footer>
+        <div class="button_up">
+            <i class="fa fa-chevron-up"></i>
+        </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
